[package]
name = "keyshare"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
chacha20poly1305 = {version = "0.10.1", features = ["std"]}
thiserror = "1.0.64"
nn-secret-share = { path = "../nn-secret-share"}
serde = { version = "1.0.214", features = ["derive"]}
serde_json = "1.0.132"
clap = { version = "4.5.23", features = ["derive"] }

[dev-dependencies]
tempfile = "3.14.0"
